# Windows-CalcEngine

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  README.md
cmake/: CMakeExternalConfig.cmake.in  CMakeLists.txt  CompilerFlags.cmake  WCECompilerFlags.cmake  WCEInternalUtils.cmake  WCEProjectMacros.cmake  blas.CMakeLists.txt.in  ceres.CMakeLists.txt.in  eigen.CMakeLists.txt.in  gflags.CMakeLists.txt.in  glog.CMakeLists.txt.in  gtest.CMakeLists.txt.in  internal_utils.cmake  lapack.CMakeLists.txt.in  suitesparse.CMakeLists.txt.in
src/: CMakeLists.txt
src/Chromogenics/: CMakeLists.txt
src/Chromogenics/include/: WCEChromogenics.hpp
src/Chromogenics/src/: ThermochromicSurface.cpp  ThermochromicSurface.hpp
src/Chromogenics/tst/: SingleClearThermochromics.unit.cpp
src/Common/: CMakeLists.txt
src/Common/include/: WCECommon.hpp
src/Common/src/: Callbacks.hpp  CommonWavelengths.cpp  CommonWavelengths.hpp  Constants.hpp  EnumArray.hpp  EnumValues.hpp  EnumerationTemplate.hpp  FenestrationCommon.hpp  Geometry.cpp  Geometry.hpp  Hemispherical2DIntegrator.cpp  Hemispherical2DIntegrator.hpp  IntegratorStrategy.cpp  IntegratorStrategy.hpp  Interpolation2D.cpp  Interpolation2D.hpp  LinearSolver.cpp  LinearSolver.hpp  LouveredShutter.cpp  LouveredShutter.hpp  MathFunctions.hpp  MatrixSeries.cpp  MatrixSeries.hpp  Parallel.hpp  Perforated.hpp  Polynom.cpp  Polynom.hpp  PolynomialFit.cpp  PolynomialFit.hpp  Series.cpp  Series.hpp  SideEnumIndex.hpp  SpecularLayer.cpp  SpecularLayer.hpp  SquareMatrix.cpp  SquareMatrix.hpp  State.cpp  State.hpp  SurfaceCoating.hpp  Table2D.hpp  (+15 more)
src/Common/tst/: CalcPolynom.unit.cpp  Hemispherical2DIntegration.unit.cpp  LinearSolver1.unit.cpp  MatrixAddition.unit.cpp  MatrixCopyFrom.unit.cpp  MatrixInverse.unit.cpp  MatrixMultiplication.unit.cpp  MatrixSeries.unit.cpp  PolynomialFit.unit.cpp  PolynomialPoints.unit.cpp  SPChipInterpolation.unit.cpp  SeriesGeneral.unit.cpp  SeriesIntegration.unit.cpp  SeriesInterpolation.unit.cpp  SeriesMultiplication.unit.cpp  SeriesOperations.unit.cpp  SimpleRectangularInterpolator.unit.cpp  SimpleTrapezoidalInterpolator.unit.cpp  WavelengthRange.unit.cpp  main.cpp  mmap.unit.cpp
src/Gases/: CMakeLists.txt
src/Gases/include/: WCEGases.hpp
src/Gases/src/: Constants.hpp  Gas.cpp  Gas.hpp  GasCreator.cpp  GasCreator.hpp  GasData.cpp  GasData.hpp  GasExcept.cpp  GasExcept.hpp  GasItem.cpp  GasItem.hpp  GasProperties.cpp  GasProperties.hpp  GasSetting.cpp  GasSetting.hpp
src/Gases/tst/: GasPropertiesDoubleGas.unit.cpp  GasPropertiesQuadrupleGas.unit.cpp  GasPropertiesQuadrupleGasCustom.unit.cpp  GasPropertiesSingleGas.unit.cpp  GasPropertiesVacuum.unit.cpp
src/Gasses/: CMakeLists.txt
src/Gasses/src/: Gas.cpp  Gas.hpp  GasData.cpp  GasData.hpp  GasItem.cpp  GasItem.hpp  GasProperties.cpp  GasProperties.hpp
src/Gasses/tst/: GasPropertiesDoubleGas.unit.cpp  GasPropertiesQuadrupleGas.unit.cpp  GasPropertiesSingleGas.unit.cpp
src/LayerOptics/: CMakeLists.txt
src/LayerOptics/doc/: VenetianCellDescriptionFlat45.unit.venetian
src/LayerOptics/src/: BSDFDirections.cpp  BSDFDirections.hpp  BSDFLayer.cpp  BSDFLayer.hpp  BSDFLayerMaker.cpp  BSDFLayerMaker.hpp  BSDFPatch.cpp  BSDFPatch.hpp  BSDFPhiAngles.cpp  BSDFPhiAngles.hpp  BSDFPhiLimits.cpp  BSDFPhiLimits.hpp  BSDFResults.cpp  BSDFResults.hpp  BSDFThetaLimits.cpp  BSDFThetaLimits.hpp  BaseBSDFLayerMultiWL.cpp  BaseBSDFLayerMultiWL.hpp  BaseCell.cpp  BaseCell.hpp  BaseCellDescription.cpp  BaseCellDescription.hpp  BaseLayerOptics.hpp  BeamDirection.cpp  BeamDirection.hpp  CellDescription.cpp  CellDescription.hpp  DirectionalDiffuseBSDFLayer.cpp  DirectionalDiffuseBSDFLayer.hpp  DirectionalDiffuseCell.cpp  DirectionalDiffuseCell.hpp  LayerSingleComponent.cpp  LayerSingleComponent.hpp  MaterialDescription.cpp  MaterialDescription.hpp  OpticalLayer.cpp  OpticalLayer.hpp  OpticalSurface.cpp  OpticalSurface.hpp  PerfectDiffuseCellDescription.cpp  (+25 more)
src/LayerOptics/tst/: BSDFDirectionsClosestIndex.unit.cpp  BSDFQuarterBasis.unit.cpp  BSDFThetaLimitsFullBasis.unit.cpp  BSDFThetaLimitsHalfBasis.unit.cpp  BSDFThetaLimitsQuarterBasis.unit.cpp  BeamDirection.unit.cpp  CircularPerforatedCell.unit.cpp  CircularPerforatedShade1.unit.cpp  CircularPerforatedShade2.unit.cpp  CircularPerforatedShadeMultiWavelength.unit.cpp  DoubleRangeMaterialRatio.unit.cpp  DoubleRangeMaterialSolarRadiation.unit.cpp  PerfectDiffuseCell1.unit.cpp  PerfectDiffuseCell2.unit.cpp  PerfectDiffuseShade1.unit.cpp  PhiAngles1.unit.cpp  PhiAngles2.unit.cpp  PhiLimits1.unit.cpp  PhiLimits2.unit.cpp  RectangularPerforatedCell.unit.cpp  RectangularPerforatedShade1.unit.cpp  RectangularPerforatedShade2.unit.cpp  ScatteringSurface.unit.cpp  SpecularLayerMultiWavelength_102.unit.cpp  SpecularLayer_102.unit.cpp  SpecularLayer_103.unit.cpp  SpecularLayer_1042.unit.cpp  VenetianCellCurved55_1.unit.cpp  VenetianCellCurved55_2.unit.cpp  VenetianCellCurvedMinus55_1.unit.cpp  VenetianCellCurvedMinus55_2.unit.cpp  VenetianCellDescriptionCurvedMinus55.unit.cpp  VenetianCellDescriptionFlat45.unit.cpp  VenetianCellFlat0_1.unit.cpp  VenetianCellFlat0_2.unit.cpp  VenetianCellFlat45_1.unit.cpp  VenetianCellFlat45_2.unit.cpp  VenetianCellFlatMinus45_1.unit.cpp  VenetianCellFlatMinus45_2.unit.cpp  VenetianDirectionalShadeFlat0_1.unit.cpp  (+13 more)
src/MultiLayerOptics/: CMakeLists.txt
src/MultiLayerOptics/include/: WCEMultiLayerOptics.hpp
src/MultiLayerOptics/src/: AbsorptancesMultiPane.cpp  AbsorptancesMultiPane.hpp  AbsorptancesMultiPaneBSDF.cpp  AbsorptancesMultiPaneBSDF.hpp  CalculationProperties.cpp  CalculationProperties.hpp  ColorProperties.cpp  (+39 more)
src/MultiPane/: CMakeLists.txt
src/SingleLayerOptics/: CMakeLists.txt
src/SpectralAveraging/: CMakeLists.txt
src/Tarcog/: CMakeLists.txt
src/Viewer/: CMakeLists.txt
src/helper/: commonFrames.cpp  commonFrames.hpp  csvHandlers.cpp  csvHandlers.hpp  mapTesting.hpp  matrixTesting.cpp  matrixTesting.hpp  parametrics.hpp  spectralSampleData.cpp  spectralSampleData.hpp  standardData.cpp  standardData.hpp  vectorTesting.hpp
(+1136 files in other folders)
